# collab_typer

./: README.md
back/: main.py  pyproject.toml
back/app/: config.py  database.py  dependencies.py  endpoints.py  models.py
back/errors/: ForbiddenError.js  InternalServerError.js
back/services/: api.js  index.js
front/: index.html  package-lock.json  package.json  tsconfig.json
front/src/: App.tsx  main.tsx
front/src/components/: Header.tsx  Input.tsx  Session.tsx
front/src/errors/: BadRequestError.js  BadRequestError.ts  ForbiddenError.ts  InternalServerError.ts  NotFoundError.js  NotFoundError.ts
front/src/hooks/: useDebouncedValue.ts  useWebSocket.ts
front/src/services/: api.ts  index.ts
