[project]
name = "collab-typer"
version = "0.1.0"
description = "Collab Typer is a collaborative typing app that allows you to type text with others in real time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
